changes made in all api routes, static, utils, schemas, docker compose and entrypoint new user route created,
